infrastructure/k8s/shared/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-ingress
  labels:
    app: hermes
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-gateway
                port:
                  number: 8081
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-ingress-ws
  labels:
    app: hermes
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Exact
            backend:
              service:
                name: ws-gateway
                port:
                  number: 8082
